Closed Bug 1956918 Opened 5 months ago Closed 5 months ago

"Calendar.cpp:1414:27: error: result of comparison of 15 >= 4-bit unsigned value is always true" with NDK r29-beta1

Categories

(Core :: JavaScript: Standard Library, defect)

defect

Tracking

()

VERIFIED FIXED
138 Branch
Tracking Status
firefox138 --- verified

People

(Reporter: RyanVM, Assigned: anba)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

I ran a Try push with NDK r29-beta1 and hit the following build failure:
https://treeherder.mozilla.org/logviewer?job_id=501319338&repo=try&lineNumber=12433

 INFO -  In file included from Unified_cpp_builtin_temporal0.cpp:2:
ERROR -  /builds/worker/checkouts/gecko/js/src/builtin/temporal/Calendar.cpp:1414:27: error: result of comparison of 15 >= 4-bit unsigned value is always true [-Werror,-Wtautological-value-range-compare]
 INFO -   1414 |   static_assert(MaxLength >= ICUEraNameMaxLength(),
 INFO -        |                 ~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~
 INFO -  1 error generated.

Andre, can you please take a look when you get a chance? I've attached a WIP patch to the dependent bug which should allow for easier testing on Try.

Flags: needinfo?(andrebargull)

We've previously seen the same issue for wasm32-wasi (bug 1936626). It's strange that there isn't an error for other configurations...

See Also: → 1936626
Assignee: nobody → andrebargull
Status: NEW → ASSIGNED
Flags: needinfo?(andrebargull)
Pushed by andre.bargull@gmail.com: https://hg.mozilla.org/integration/autoland/rev/8506de501886 Disable tautological-value-range-compare to avoid a bogus Clang warning. r=dminor
Status: ASSIGNED → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch

Looks good, thanks!

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: