Bug 1956918: Disable tautological-value-range-compare to avoid a bogus Clang warning. r=dminor

Differential Revision: https://phabricator.services.mozilla.com/D243513